java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField7-hints.pass
Create Method test() in org.netbeans.test.java.hints.CreateField7
